@@ -1,3 +1,11 @@
+2008-02-27  Christopher Faylor  <me+cygwin@cgf.cx>
+
+	* cygtls.cc (_cygtls::handle_threadlist_exception): Make it clear that
+	the function never actually returns.
+	* exceptions.cc (_cygtls::handle_exceptions): Jump out of function
+	rather than returning to avoid meddling by previously installed
+	exception handlers.
+
 2008-02-25  Corinna Vinschen  <corinna@vinschen.de>
 
 	* dcrt0.cc (initial_env): Only use local buffer "buf" if DEBUGGING is
